force-app/main/default/objects/OwnedVehicles__c/OwnedVehicles__c.object-meta.xml
<CustomObject>
    <description>List of Vehicles Owned by Persons over time</description>
    <label>Owned Vehicle</label>
    <nameField>
        <displayFormat>OWN{0000000}</displayFormat>
        <label>Owned Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owned Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>