force-app/main/default/objects/OwnedVehicles__c/fields/CurrentOwner__c.field-meta.xml
<CustomField>
    <fullName>CurrentOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Person is current owner of vehicle</inlineHelpText>
    <label>Current Owner</label>
    <type>Checkbox</type>
</CustomField>