force-app/main/default/objects/OwnedVehicles__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dealer associated with this Person/Vehicle combination</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles and their Owners</relationshipLabel>
    <relationshipName>Owned_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>