force-app/main/default/objects/OwnedVehicles__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <inlineHelpText>Date vehicle known to be owned by person</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>