force-app/main/default/objects/OwnedVehicles__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person who Owns or Owned the related vehicle</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Vehicles</relationshipLabel>
    <relationshipName>Owned_Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>