force-app/main/default/objects/OwnedVehicles__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <inlineHelpText>Date vehicle known to be owned by person until</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>