force-app/main/default/objects/OwnedVehicles__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Vehicle associated with the related Owner</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Owners of This Vehicle</relationshipLabel>
    <relationshipName>Owned_Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>